--- a/pythons/control.ipynb
+++ b/pythons/control.ipynb
@@ -478,12 +478,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "77a804f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Count number of vowels in a string.\n",
+    "\n",
+    "strs=\"string I love you\"\n",
+    "vowel=['a','i','e','o','u','A','I','U','E','O',]\n",
+    "count=0\n",
+    "for i in range(len(strs)):\n",
+    "    if strs[i] in vowel:\n",
+    "       count+=1\n",
+    "       \n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "e28dae5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print numbers from 10 down to 1.\n",
+    "n=11\n",
+    "for i in range(10):\n",
+    "    if n>=1:\n",
+    "      n-=1\n",
+    "      print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "23a60d91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print numbers from 1 to 10 using while loop.\n",
+    "i=0\n",
+    "\n",
+    "while(i<=10):\n",
+    "    i+=1\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "1b7dd9ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print all odd numbers below 21.\n",
+    "i=0\n",
+    "while(i<=20):\n",
+    "     i+=1\n",
+    "     if i%2==1:\n",
+    "        print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "6da13048",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "421\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print reverse of a number using while loop.\n",
+    "\n",
+    "num=124\n",
+    "rev=0\n",
+    "while num>0:\n",
+    "    nums=num%10\n",
+    "    rev= rev * 10 + nums\n",
+    "    num=num//10\n",
+    "\n",
+    "print(rev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33af7ba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Find sum of digits of a number.\n",
+    "\n",
+    "sum=0\n",
+    "num=12\n",
+    "while(num>0):\n",
+    "    digit=num%10\n",
+    "    sum+=digit\n",
+    "    num//=10\n",
+    "\n",
+    "print(sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90a090e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Count number of vowels in a string.\n"
+    "#Print Fibonacci series up to n terms.\n",
+    "\n"
    ]
   }
  ],
