--- a/pythons/datastructure.ipynb
+++ b/pythons/datastructure.ipynb
@@ -380,13 +380,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "93e969ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Count occurrences of an element in a list."
+    "#Count occurrences of an element in a list.\n",
+    "list_py=['p', 'y', 't', 'h', 'o', 'n']\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "679d827c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Append an element to a list.\n",
+    "list_py=[]\n",
+    "\n",
+    "for i in range(20):\n",
+    "     list_py.append(i)\n",
+    "\n",
+    "print(list_py)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "255641bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 13, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Insert an element at index 2.\n",
+    "list_num=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "list_num.insert(2,13)\n",
+    "\n",
+    "print(list_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cf22f396",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12, 13, 45, 56]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Extend a list with another list.\n",
+    "list_num=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "list_num2=[ 12,13,45,56]\n",
+    "list_num.extend(list_num2)\n",
+    "print(list_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "23971ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Remove an element from a list.\n",
+    "list_num=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "list_num.remove(10)\n",
+    "print(list_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "23ff5533",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Pop last element from a list\n",
+    "list_num=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "list_num.pop()\n",
+    "print(list_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bd632264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Pop element at index 3.\n",
+    "list_num=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "list_num.pop(3)\n",
+    "print(list_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "42441a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Sort a list in ascending order.\n",
+    "list_num=[10,9,8,7,5]\n",
+    "list_num.sort()\n",
+    "print(list_num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c04b2848",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Sort a list in descending order.\n",
+    "list_num=[1,2,3,4,5]\n",
+    "list_num.sort(reverse=True)\n",
+    "print(list_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f0b0652b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Reverse a list using method.\n",
+    "list_num=[1,2,3,4,5]\n",
+    "list_num.reverse()\n",
+    "print(list_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aace3de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Copy a list using .copy().\n",
+    "list_num=[1,2,3,4,5]\n",
+    "list_num2=[]\n",
+    "list_num2=list_num.copy()\n",
+    "print(list_num2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6ef7490",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Find index of first occurrence of 10 in list.\n",
+    "list_num=[1,2,10,4,5,10,10,5]\n",
+    "index=0\n",
+    "\n",
+    "for i in range(len(list_num)):\n",
+    "    if(list_num[i]==10):\n",
+    "        index=i\n",
+    "        break\n",
+    "\n",
+    "print(index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6e2fa9be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Count how many times \"apple\" appears in a list.\n",
+    "list_fruit=[\"mango\",\"apple\",\"chiku\",\"apple\"]\n",
+    "count=0\n",
+    "\n",
+    "for i in range(len(list_fruit)):\n",
+    "     if(list_fruit[i]==\"apple\"):\n",
+    "          count+=1\n",
+    "\n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "3455f6ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Multiply all elements of list [2,3,4].\n",
+    "mul=[2,3,4]\n",
+    "for i in range(len(mul)):\n",
+    "     mul[i]*=2\n",
+    "\n",
+    "\n",
+    "print(mul)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "d6183246",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Convert a tuple (1,2,3) into a list.\n",
+    "tup=(1,2,3)\n",
+    "list_of=tup\n",
+    "print(list(list_of))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b13898b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
