--- a/pythons/functions.ipynb
+++ b/pythons/functions.ipynb
@@ -176,13 +176,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "3\n",
-      "2\n",
       "1\n",
-      "0\n",
-      "-1\n",
-      "None\n"
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
      ]
     }
    ],
@@ -190,13 +194,286 @@
     "#Write a function that prints first n natural numbers.\n",
     "\n",
     "def natural(n):\n",
-    "    if n<0:\n",
-    "      return -1\n",
-    "    print(n)\n",
-    "    natural(n-1)\n",
+    "    i=0\n",
+    "    while(i<=n):\n",
+    "       i+=1\n",
+    "       print(i)\n",
     "\n",
-    "print(natural(5))\n",
+    "\n",
+    "natural(10)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "37d132fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Define a function that takes a list and prints its elements.\n",
+    "\n",
+    "def list_print(lists):\n",
+    "     print(lists)\n",
+    "\n",
+    "list_print([1,2,3,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6c2e903",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a function that returns sum of first 10 natural numbers.\n",
+    "\n",
+    "def sumN(n):\n",
+    "  sum=0\n",
+    "  i=0\n",
+    "  while(i<n):\n",
+    "     i+=1\n",
+    "     sum+=i\n",
+    "\n",
+    "  return sum\n",
+    "    \n",
+    "\n",
+    "print(sumN(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "cdc85ad9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I can help you!'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Call a function inside another function.\n",
+    "def call1():\n",
+    "    return \"I can help you!\"\n",
+    "\n",
+    "def recive():\n",
+    "    print(call1())\n",
+    "\n",
+    "call1()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "75697965",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a function to subtract two numbers using positional arguments.\n",
+    "def sub(num1,num2):\n",
+    "    return num1-num2\n",
+    "\n",
+    "print(sub(9,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "690e73e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a function that calculates area of rectangle given length and width.\n",
+    "def reactArea(len,width):\n",
+    "    return len*width\n",
+    "\n",
+    "print(reactArea(4,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "b0fddc86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a function that multiplies three numbers.\n",
+    "def thrimul(num1,num2,num3):\n",
+    "     return num1*num2*num3\n",
+    "\n",
+    "print(thrimul(1,2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "653fc041",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sahil 24 A\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Call a function with arguments in correct order.\n",
+    "def nameid(name,age,grade):\n",
+    "       print(\"name:\",name)\n",
+    "       print(\"Age:\",age)\n",
+    "       print(\"grade:\",grade)\n",
+    "\n",
+    "print(\"Sahil\",24,'A')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e97f8b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a function with two parameters and call it using keyword arguments\n",
+    "\n",
+    "def mul(num1,num2):\n",
+    "    \n",
+    "    return num1*num2\n",
+    "\n",
+    "result=mul(num1=1000,num2=200)\n",
+    "print(result)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "002a2222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: sahil\n",
+      "Age: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Define a function with parameters name, age and call with name=\"Alex\", age=21.\n",
+    "def id(name,age):\n",
+    "    print(\"Name:\",name)\n",
+    "    print(\"Age:\",age)\n",
+    "\n",
+    "\n",
+    "id(name=\"sahil\",age=21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "7a674016",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "216\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a function to calculate volume of cuboid using keyword args.\n",
+    "def cube(l,w,h):\n",
+    "    return l*w*h\n",
+    "\n",
+    "print(cube(6,6,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "1b369144",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sahil 21 A EXTC\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Mix positional and keyword arguments in a function call.\n",
+    "def id2(name,age,grade,classstd):\n",
+    "    print(\"name:\",name)\n",
+    "    print(\"age:\",age)\n",
+    "    print(\"grade:\",grade)\n",
+    "    print(\"classes:\",classstd)\n",
+    "\n",
+    "\n",
+    "print(\"sahil\",21,'A',\"EXTC\")"
    ]
   }
  ],
