--- a/pythons/opp.ipynb
+++ b/pythons/opp.ipynb
@@ -318,7 +318,16 @@
    "execution_count": null,
    "id": "4f615b54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brand: BMW\n",
+      "year: 1999\n"
+     ]
+    }
+   ],
    "source": [
     "#Define a constructor in Car class to initialize brand and year.\n",
     "class Car:\n",
@@ -331,8 +340,18 @@
     "         print(\"year:\",self.year)\n",
     "\n",
     "\n",
-    "Car1=Car\n",
+    "Car1=Car(\"BMW\",1999)\n",
     "Car1.printinfo()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ded84c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write a constructor for Student to initialize name and marks.\n"
    ]
   }
  ],
