--- a/pythons/opp.ipynb
+++ b/pythons/opp.ipynb
@@ -346,13 +346,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2ded84c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Sahil\n",
+      "marks: 95.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write a constructor for Student to initialize name and marks.\n",
+    "class Student:\n",
+    "     def __init__(self,name,marks):\n",
+    "          self.name=name\n",
+    "          self.marks=marks\n",
+    "    \n",
+    "     def printStudentInfo(self):\n",
+    "          print(\"Name:\",self.name)\n",
+    "          print(\"marks:\",self.marks)\n",
+    "\n",
+    "\n",
+    "Students=Student(\"Sahil\",95.76)\n",
+    "Students.printStudentInfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8d670b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my balance is:2000\n",
+      "my balance is:2001000079999\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a class BankAccount that initializes with balance\n",
+    "\n",
+    "class BankAccount:\n",
+    "     \n",
+    "     def __init__(self,balance):\n",
+    "          self.balance=balance\n",
+    "          \n",
+    "     def showBalance(self):\n",
+    "          print(f\"my balance is:{self.balance}\")\n",
+    "\n",
+    "BankAccount1=BankAccount(2000)\n",
+    "BankAccount1.showBalance()\n",
+    "BankAccount2=BankAccount(2001000079999)\n",
+    "BankAccount2.showBalance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "746fef1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: vasudev\n",
+      "price: 2000\n",
+      "Title: yayati\n",
+      "price: 2003\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Define constructor for Book to store title and price.\n",
+    "class Book:\n",
+    "      def __init__(self,title,price):\n",
+    "            self.title=title\n",
+    "            self.price=price\n",
+    "\n",
+    "      def printBookinfo(self):\n",
+    "          print(\"Title:\",self.title)\n",
+    "          print(\"price:\",self.price)\n",
+    "\n",
+    "\n",
+    "Book1=Book(\"vasudev\",2000)\n",
+    "Book1.printBookinfo()\n",
+    "Book2=Book(\"yayati\",2003)\n",
+    "Book2.printBookinfo()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "44a510ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id: 23\n",
+      "salary: 20000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a class Employee initializing with id and salary.\n",
+    "class Employee:\n",
+    "     def __init__(self,id,salary):\n",
+    "          self.id=id\n",
+    "          self.salary=salary\n",
+    "     \n",
+    "     def printid(self):\n",
+    "          print(\"id:\",self.id)\n",
+    "          print(\"salary:\",self.salary)\n",
+    "\n",
+    "Employee1=Employee(23,20000)\n",
+    "Employee1.printid()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "42b16f35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0)\n",
+      "(5,6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write constructor for Point with x and y coordinates.\n",
+    "\n",
+    "class point:\n",
+    "       def __init__(self,x,y):\n",
+    "              self.x=x\n",
+    "              self.y=y      \n",
+    "       def printxy(self):\n",
+    "            print(f\"({self.x},{self.y})\")\n",
+    "\n",
+    "\n",
+    "point1=point(0,0)\n",
+    "point1.printxy()\n",
+    "point2=point(5,6)\n",
+    "point2.printxy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a33b843",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangle area is:12\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Define class that initializes length and width.\n",
+    "class Rectangle:\n",
+    "    def __init__(self,length,width):\n",
+    "         self.length=length\n",
+    "         self.width=width\n",
+    "     \n",
+    "    def printArea(self):\n",
+    "          print(f\"Rectangle area is:{self.length*self.width}\")\n",
+    "\n",
+    "Rectangle1=Rectangle(5,2)\n",
+    "Rectangle1.printArea()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "736c6e8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAM: 4GB\n",
+      "storage: 128TB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a constructor for Laptop to initialize RAM and storage.\n",
+    "class Laptop:\n",
+    "      def __init__(self,RAM,storage):\n",
+    "            self.RAM=RAM\n",
+    "            self.storage=storage\n",
+    "        \n",
+    "      def printInfo(self):\n",
+    "        print(\"RAM:\",self.RAM)\n",
+    "        print(\"storage:\",self.storage)\n",
+    "\n",
+    "Laptop1=Laptop(\"4GB\",\"128TB\")\n",
+    "Laptop1.printInfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "9a30e90e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: S.R.Kambale\n",
+      "subject: MATH\n",
+      "name: P.K.Naik\n",
+      "subject: Machine learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write class Teacher with name and subject initialized via constructor.\n",
+    "class Teacher:\n",
+    "     def __init__(self,name,subject):\n",
+    "          self.name=name\n",
+    "          self.subject=subject\n",
+    "\n",
+    "     def printSchoolInfo(self):\n",
+    "          print(\"name:\",self.name)\n",
+    "          print(\"subject:\",self.subject)\n",
+    "\n",
+    "Teacher1=Teacher(\"S.R.Kambale\",\"MATH\")\n",
+    "Teacher2=Teacher(\"P.K.Naik\",\"Machine learning\")\n",
+    "\n",
+    "Teacher1.printSchoolInfo()\n",
+    "Teacher2.printSchoolInfo()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57b6994b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subject created!\n",
+      "name: S.R.Kambale\n",
+      "subject: MATH\n",
+      "subject created!\n",
+      "name: P.K.Naik\n",
+      "subject: Machine learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a constructor that prints message \"Object created\".\n",
+    "class Teacher:\n",
+    "     def __init__(self,name,subject):\n",
+    "          self.name=name\n",
+    "          self.subject=subject\n",
+    "          print(\"subject created!\")\n",
+    "          \n",
+    "     def printSchoolInfo(self):\n",
+    "          print(\"name:\",self.name)\n",
+    "          print(\"subject:\",self.subject)\n",
+    "\n",
+    "Teacher1=Teacher(\"S.R.Kambale\",\"MATH\")\n",
+    "Teacher1.printSchoolInfo()\n",
+    "Teacher2=Teacher(\"P.K.Naik\",\"Machine learning\")\n",
+    "Teacher2.printSchoolInfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcb33155",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write a constructor for Student to initialize name and marks.\n"
+    "print(\"**************************************8Instance & Class Variables*********************************************************\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abb3f9de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Sahil\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a class Student with instance variable name.\n",
+    "class Student:\n",
+    "     def __init__(self,name):\n",
+    "          self.name=name\n",
+    "\n",
+    "Student1=Student(\"Sahil\")\n",
+    "print(\"name:\",Student1.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56e956fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
