--- a/pythons/opp.ipynb
+++ b/pythons/opp.ipynb
@@ -641,12 +641,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"**************************************8Instance & Class Variables*********************************************************\")"
+    "print(\"**************************************Instance & Class Variables*********************************************************\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "abb3f9de",
    "metadata": {},
    "outputs": [
@@ -670,11 +670,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "56e956fa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created object!\n",
+      "name:Sahil\n",
+      "school name:Finolex Academy\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Add class variable school for all Student objects.\n",
+    "class Student:\n",
+    "     \n",
+    "     school_name=\"GOVERNMENT POLYECHNIC!\"\n",
+    "\n",
+    "     def __init__(self,name):\n",
+    "         self.name=name\n",
+    "         print(\"created object!\")\n",
+    "\n",
+    "Student1=Student(\"Sahil\")\n",
+    "Student.school_name=\"Finolex Academy\"\n",
+    "print(f\"name:{Student1.name}\\nschool name:{Student.school_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcaa5dd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "modify!\n",
+      "Tiger\n",
+      "modify!\n",
+      "Leopard\n"
+     ]
+    }
+   ],
+   "source": [
+    "#modify instance variable without affecting others.\n",
+    "class Animal:\n",
+    "      def __init__(self,name):\n",
+    "        self.name=name\n",
+    "        print(\"modify!\")\n",
+    "        \n",
+    "Animal1=Animal(\"Tiger\")\n",
+    "print(Animal1.name)\n",
+    "Animal2=Animal(\"Lione\")\n",
+    "Animal2.name=\"Leopard\"\n",
+    "print(Animal2.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d48bf6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rahul - ABC School\n",
+      "Priya - ABC School\n",
+      "\n",
+      "After changing class variable:\n",
+      "Rahul - XYZ School\n",
+      "Priya - XYZ School\n"
+     ]
+    }
+   ],
+   "source": [
+    "# change class variable using class name\n",
+    "class Student:\n",
+    "    school_name = \"ABC School\"   # class variable\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "\n",
+    "s1 = Student(\"Rahul\")\n",
+    "s2 = Student(\"Priya\")\n",
+    "\n",
+    "print(s1.name, \"-\", s1.school_name)\n",
+    "print(s2.name, \"-\", s2.school_name)\n",
+    "\n",
+    "# change class variable using class name\n",
+    "Student.school_name = \"XYZ School\"\n",
+    "\n",
+    "print(\"\\nAfter changing class variable:\")\n",
+    "print(s1.name, \"-\", s1.school_name)\n",
+    "print(s2.name, \"-\", s2.school_name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a6ec4c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:Sahil\n",
+      "Home town:MUMBAI\n",
+      "name:simran\n",
+      "Home town:shirgav\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Show difference between instance and class variables.\n",
+    "class person:\n",
+    "     Hometown=\"basni\" #class vaaribale\n",
+    "\n",
+    "     def __init__(self,name):\n",
+    "          self.name=name; # instance variable\n",
+    "\n",
+    "person1=person(\"Sahil\")\n",
+    "person2=person(\"simran\")\n",
+    "\n",
+    "person.Hometown=\"MUMBAI\"\n",
+    "person2.name=\"simran\"\n",
+    "print(f\"name:{person1.name}\\nHome town:{person.Hometown}\")\n",
+    "person.Hometown=\"shirgav\"\n",
+    "print(f\"name:{person2.name}\\nHome town:{person.Hometown}\")\n"
+   ]
   }
  ],
  "metadata": {
