--- a/numpys/Basic.ipynb
+++ b/numpys/Basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "af0d1ca9",
    "metadata": {},
    "outputs": [
@@ -16,9 +16,8 @@
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
     "t=np.array([1,2,3,4,5])\n",
-    "print(type(t))\n"
+    "print(type(t))"
    ]
   }
  ],
