--- a/pythons/opp.ipynb
+++ b/pythons/opp.ipynb
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "5a6ec4c5",
    "metadata": {},
    "outputs": [
@@ -782,6 +782,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "name:Sahil\n",
+      "Home town:basni\n",
       "name:Sahil\n",
       "Home town:MUMBAI\n",
       "name:simran\n",
@@ -799,6 +801,7 @@
     "\n",
     "person1=person(\"Sahil\")\n",
     "person2=person(\"simran\")\n",
+    "print(f\"name:{person1.name}\\nHome town:{person.Hometown}\")\n",
     "\n",
     "person.Hometown=\"MUMBAI\"\n",
     "person2.name=\"simran\"\n",
